
set(RASTERIZED_ICONS PARENT_SCOPE)

foreach(ICON_SIZE IN LISTS ICON_SIZES)
    foreach(ICON_NAME IN LISTS ICON_NAMES)
        add_custom_command(
            OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/${ICON_SIZE}x${ICON_SIZE}/${ICON_NAME}.png
            COMMAND mkdir ARGS -p ${CMAKE_CURRENT_SOURCE_DIR}/${ICON_SIZE}x${ICON_SIZE}
            COMMAND rsvg-convert ARGS -w ${ICON_SIZE} -h ${ICON_SIZE} -o ${CMAKE_CURRENT_SOURCE_DIR}/${ICON_SIZE}x${ICON_SIZE}/${ICON_NAME}.png ${CMAKE_CURRENT_SOURCE_DIR}/scalable/${ICON_NAME}.svg
            MAIN_DEPENDENCY ${CMAKE_CURRENT_SOURCE_DIR}/scalable/${ICON_NAME}.svg
        )
        list(APPEND RASTERIZED_ICONS ${CMAKE_CURRENT_SOURCE_DIR}/${ICON_SIZE}x${ICON_SIZE}/${ICON_NAME}.png)
    endforeach()
endforeach()

set(ICON_SIZES_STR "${ICON_SIZES}")
string(REPLACE ";" "," ICON_SIZES_STR "${ICON_SIZES_STR}")

find_package(Python3 COMPONENTS Interpreter REQUIRED)

add_custom_command(
    OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/index.theme
    COMMAND ${Python3_EXECUTABLE} ARGS ${CMAKE_CURRENT_SOURCE_DIR}/generate_index.py ${CMAKE_CURRENT_SOURCE_DIR}/index.theme "${ICON_SIZES_STR}"
    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
    MAIN_DEPENDENCY ${CMAKE_CURRENT_SOURCE_DIR}/generate_index.py
    DEPENDS ${RASTERIZED_ICONS}
)
